# react-native-cache

./: .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  README.md  package.json  react-native-cache.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp
android/src/main/: AndroidManifest.xml
android/src/main/java/com/reactnativecache/: CacheModule.java  CachePackage.java
cpp/: CMakeLists.txt  CacheValue.cpp  CacheValue.hpp  DiskStorage.cpp  DiskStorage.hpp  ios_build.sh  react-native-cache.cpp  react-native-cache.h
cpp/Bridge/: react-native-cache.cpp
cpp/HCache/: CMakeLists.txt  HCache.podspec  ios_build.sh
cpp/HCache/include/: CacheValue.hpp  DiskStorage.hpp  KVSingleton.hpp
cpp/HCache/src/: CacheValue.cpp  DiskStorage.cpp  KVSingleton.cpp
cpp/src/: DiskStorage.cpp
example/: app.json  package-lock.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/debug/java/com/example/reactnativecache/: ReactNativeFlipper.java
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/example/reactnativecache/: MainActivity.java  MainApplication.java
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/CacheExample/: AppDelegate.m  Info.plist  LaunchScreen.storyboard
example/ios/CacheExample.xcodeproj/: project.pbxproj
example/ios/CacheExample.xcodeproj/xcshareddata/xcschemes/: CacheExample.xcscheme
example/src/: App.tsx
ios/: Cache.h  Cache.mm
ios/Cache.xcodeproj/: project.pbxproj
lib/commonjs/: index.js  index.js.map
lib/module/: index.js  index.js.map
lib/typescript/: index.d.ts
src/: index.tsx
